openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-app
  namespace: project-x
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nuxt-app
  template:
    metadata:
      labels:
        app: nuxt-app
    spec:
      containers:
        - name: nuxt-app
          image: ghcr.io/<YOUR_GITHUB_USERNAME>/nuxt-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
