openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-app
  namespace: project-x
spec:
  selector:
    app: nuxt-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
