openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nuxt-app
  namespace: project-x
spec:
  to:
    kind: Service
    name: nuxt-app
  port:
    targetPort: http
  tls:
    termination: edge
